plugins {
	id 'java'
	id 'org.springframework.boot' version '4.0.0'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'spring'
version = '1.0-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(25)
	}
}

repositories {
	mavenCentral()
	maven { url = 'https://repo.spring.io/milestone' }
	maven { url = 'https://repo.spring.io/snapshot' }
}

dependencies {
	implementation 'org.apache.tomcat.embed:tomcat-embed-core:11.0.12'
	implementation 'jakarta.servlet:jakarta.servlet-api:6.1.0'

	implementation 'org.springframework:spring-context'
	implementation 'org.springframework:spring-web'
	implementation 'org.springframework:spring-webmvc'

	implementation("org.apache.httpcomponents.client5:httpclient5:5.5")
	implementation("org.apache.httpcomponents.core5:httpcore5-reactive:5.3.4")
//	implementation('org.eclipse.jetty:jetty-reactive-httpclient:4.0.9')
//	implementation("io.projectreactor.netty:reactor-netty-http:1.2.9")

	implementation 'org.apache.logging.log4j:log4j-api:2.25.2'
	implementation 'org.apache.logging.log4j:log4j-core:2.25.2'
	implementation 'org.apache.logging.log4j:log4j-slf4j2-impl:2.25.2'

	testImplementation 'org.junit.jupiter:junit-jupiter'
}

test {
	useJUnitPlatform()
	jvmArgs.add("--enable-preview")
}

tasks.withType(JavaCompile).configureEach {
	options.compilerArgs.add("--enable-preview")
}

tasks.withType(JavaExec).configureEach {
	jvmArgs('--enable-preview')
}

tasks.register('server', JavaExec) {
	group = "Execution"
	classpath = sourceSets.main.runtimeClasspath
	mainClass.set("server.ServerApp")
}

tasks.register('client', JavaExec) {
	group = "Execution"
	classpath = sourceSets.main.runtimeClasspath
	mainClass.set("client.ClientApp")
}
